--- a/priv/html/docs-redirect.html
+++ b/priv/html/docs-redirect.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <meta http-equiv="refresh" content="0; url='http://lfeutre.github.io/lcli/'" />
+    <meta http-equiv="refresh" content="0; url='https://lfeutre.github.io/lcli/'" />
 </head>
 
 <body>
